cluster/apps/grafana/test/helm.yaml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-grafana
  namespace: default
  labels:
    helm.sh/chart: grafana-6.13.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "8.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000

  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: grafana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: RELEASE-NAME-grafana
  namespace: default
  labels:
    helm.sh/chart: grafana-6.13.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "8.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: RELEASE-NAME
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: RELEASE-NAME
      annotations:
        checksum/config: a07c5d03d62b9d503ff507d0bb7bed71733559e0849911460b995167f1fed44b
        checksum/dashboards-json-config: 04f0b2c322829990cb8ef32434d8e98e360e845b97bd3608d1db290fd12aaba6
        checksum/sc-dashboard-provider-config: a091a6253dbeb26a59ece054975782ae6521a23137c84b416245fd6230f625ac
        checksum/secret: c29869b080c3a34c81dd5993a7085697c39e9b1715001689ead207d0c2eb33a4
        configmap.reloader.stakater.com/reload: grafana
    spec:
      
      serviceAccountName: RELEASE-NAME-grafana
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsUser: 472
      enableServiceLinks: true
      containers:
        - name: grafana-sc-dashboard
          image: "quay.io/kiwigrid/k8s-sidecar:1.12.2"
          imagePullPolicy: IfNotPresent
          resources:
            {}
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: "/tmp/dashboards"
        - name: grafana
          image: "grafana/grafana:8.0.3"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: storage
              mountPath: "/var/lib/grafana"
            - name: config
              mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
              subPath: datasources.yaml
            - name: config
              mountPath: "/etc/grafana/provisioning/dashboards/dashboardproviders.yaml"
              subPath: dashboardproviders.yaml
            - name: sc-dashboard-volume
              mountPath: "/tmp/dashboards"
      
            - name: sc-dashboard-provider
              mountPath: "/etc/grafana/provisioning/dashboards/sc-dashboardproviders.yaml"
              subPath: provider.yaml
            - name: sc-datasources-volume
              mountPath: "/etc/grafana/provisioning/datasources"
          ports:
            - name: service
              containerPort: 80
              protocol: TCP
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
          resources:
            {}
      volumes:
        - name: config
          configMap:
            name: RELEASE-NAME-grafana
        - name: dashboards-default
          configMap:
            name: RELEASE-NAME-grafana-dashboards-default
        - name: storage
          persistentVolumeClaim:
            claimName: RELEASE-NAME-grafana
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: sc-dashboard-provider
          configMap:
            name: RELEASE-NAME-grafana-config-dashboards
        - name: sc-datasources-volume
          emptyDir: {}
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: RELEASE-NAME-grafana
  namespace: default
  labels:
    helm.sh/chart: grafana-6.13.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "8.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - grafana.${SECRET_DOMAIN}
  rules:
    - host: grafana.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-grafana
                port:
                  number: 80
---
# Source: grafana/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: RELEASE-NAME-grafana-test
  labels:
    helm.sh/chart: grafana-6.13.6
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "8.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
  namespace: default
spec:
  serviceAccountName: RELEASE-NAME-grafana-test
  containers:
    - name: RELEASE-NAME-test
      image: "bats/bats:v1.1.0"
      imagePullPolicy: "IfNotPresent"
      command: ["/opt/bats/bin/bats", "-t", "/tests/run.sh"]
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
  volumes:
  - name: tests
    configMap:
      name: RELEASE-NAME-grafana-test
  restartPolicy: Never
